--- a/gsi_address_search_dialog_base.ui
+++ b/gsi_address_search_dialog_base.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>images/Search.gif</normaloff>images/Search.gif</iconset>
+    <normaloff>img/Search.gif</normaloff>img/Search.gif</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
